--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/CustomStyleExample/v14
+/Win32/Debug
+/CustomStyleExample.VC.db
+/CustomStyleExample.VC.VC.opendb
+/CustomStyleExample/GeneratedFiles
+/CustomStyleExample/Debug
